src/Styles/index.css
/* ... */
.hover-mouse-follower {
  height: 1.5rem;
  width: 1.5rem;
  position: fixed;
  pointer-events: none;
  touch-action: none;
  top: 0;
  left: 0;
  z-index: 1;
  border-radius: 50%;
  background-color: var(--clr-secondary);
  border: 1px solid var(--neutral-500);
  display: flex;
  align-items: start;
  justify-content: center;
}
.hover-mouse-follower > * {
  position: absolute;
  inset: 0;
  margin: auto;
}
.hover-mouse-follower img {
  object-fit: contain;
  clip-path: circle();
  height: auto;
  width: auto;
}
.hover-mouse-follower .minify-hover {
  color: var(--clr-txt);
  font-family: "Okine-Medium";
  font-size: var(--fs-body);
  line-height: 1.3;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  height: fit-content;
}
.hover-mouse-follower .minify-hover svg {
  height: 1em;
  width: 1em;
}
.hover-mouse-follower .resume-hover {
  color: var(--clr-txt);
  font-family: "Okine-Medium";
  font-size: calc(var(--fs-body) - 0.25cqw);
  height: fit-content;
  display: inline-flex;
  gap: 0.5rem;
  align-items: center;
  justify-content: center;
}
.hover-mouse-follower .resume-hover svg {
  height: 1em;
  width: 1em;
}

.hide {
  visibility: hidden;
}

@keyframes down-arrow {
  from {
    transform: translateY(-1px);
  }
  to {
    transform: translateY(1px);
  }
}
@keyframes question-mark {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(1px);
  }
}
@keyframes dots {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(-2px);
  }
}

/*# sourceMappingURL=index.css.map */

